# Stellarlink

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  Stellarlink_en_DE.ts  main.cpp  qml.qrc
.github/workflows/: cmake.yml
img/: stellarlink.rc
lib/: CMakeLists.txt
qml/: Ball.qml  BallQML.qml  BallTrail.qml  Board.qml  CustomButton.qml  DevGrid.qml  Floor.qml  GameControls.qml  HealthBar.qml  Heightmeter.qml  JScript.js  MainMenu.qml  MenuButton.qml  RunningStats.qml  ShowingBehaviour.qml  Speedometer.qml  field.qml  main.qml
src/: STElement.cpp  ball.cpp  ball.h  floor.cpp  floor.h  main.cpp  stellarengine.cpp  stellarengine.h  stellarlink.cpp  stellarlink.h  touchable.cpp  touchable.h
